--- a/style.css
+++ b/style.css
@@ -1,7 +1,92 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
 
-* {
-    padding: 0;
+body {
     margin: 0;
+    padding: 0;
     font-family: 'Lato', sans-serif;
 }
+
+.nav, .hero-container,
+.section-1, .section-2, .section-3 {
+    margin: 0 25vh;
+}
+
+
+.banner {
+    background-color: #1F2937;
+}
+
+.nav {
+    display: flex;
+    justify-content: space-between;
+    background-color: #1F2937;
+}
+
+.logo {
+    font-size: 26px;
+    font-weight: 800;
+    color: white;
+}
+
+a {
+    text-decoration: none;
+}
+
+.logo, .nav li {
+    padding: 16px;
+}
+
+.nav ul {
+    display: flex;
+    padding: 0;
+    margin: 0;
+    list-style: none;
+}
+
+.nav ul a {
+    color: white;
+    font-size: 20px;
+    font-weight: 400;
+}
+
+.hero-box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.hero-container {
+    display: flex;
+    margin: 6vh 0;
+    width: 75vh;
+    color: white;
+}
+
+.hero-container img {
+    width: auto;
+    height: 300px;
+}
+
+.hero {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.hero h1 {
+    margin: 0;
+}
+
+.hero button {
+    width: fit-content;
+    border: none;
+    border-radius: 8px;
+    background: #eee;
+    padding: 10px;
+    font-size: 16px;
+    font-weight: 400;
+}
+
+
+
+
