--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 
 .nav, .hero-container,
 .section-1, .section-2, .section-3 {
-    margin: 0 25vh;
+    padding: 0 25vh;
 }
 
 
@@ -58,7 +58,7 @@ a {
 .hero-container {
     display: flex;
     margin: 6vh 0;
-    width: 75vh;
+    width: 80vh;
     color: white;
 }
 
@@ -85,6 +85,48 @@ a {
     padding: 10px;
     font-size: 16px;
     font-weight: 400;
+}
+
+.section-1 {
+    text-align: center;
+    padding-bottom: 50px;
+}
+
+.subject {
+    margin: 0;
+    padding: 32px 0;
+}
+
+.card {
+    padding: 25px 0;
+    border: 5px solid #243f64;
+    border-radius:25px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.card img {
+    width: 150px;
+}
+
+.info-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 50px;
+}
+
+.info {
+    width: 250px;
+}
+
+.section-2 {
+    background-color: #E5E7EB;
+    padding: 50px 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 
